base/infrastructure/grafana-prometheus/ingress/ingress-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-vpn-web
  namespace: infrastructure
spec:
  entryPoints:
    - web-vpn
  routes:
    - match: Host(`grafana.vpn.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-vpn-websecure
  namespace: infrastructure
spec:
  entryPoints:
    - websecure-vpn
  routes:
    - match: Host(`grafana.vpn.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: grafana-vpn-tls
