base/infrastructure/grafana-prometheus/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-redirect-vpn
  namespace: infrastructure
spec:
  redirectRegex:
    regex: "^https?://grafana\\.patinanetwork\\.org/(.*)"
    replacement: "https://grafana.vpn.patinanetwork.org/${1}"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-web
  namespace: infrastructure
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: grafana-redirect-vpn
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-websecure
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: grafana-redirect-vpn
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: grafana-tls
